syntax = "proto3";
option java_multiple_files = true;

package com.fayardev.postservice.post;

service PostService {
  rpc CheckPostExists(PostRequest) returns (PostResponse);
}

message PostRequest {
  string postId = 1;
}

message PostResponse {
  bool exists = 1;
}